// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-component component-parameters.mdx 1`] = `
Object {
  "components": Object {
    "2f4bd34d15be236674abaf6e894afe6e": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 1,
          "mixed": 0,
          "single": 0,
          "source": 2,
          "todo": 0,
          "total": 3,
        },
      },
      "fileName": "button-named-arrow-func.js",
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "2f4bd34d15be236674abaf6e894afe6e",
    },
    "date": "2020-03-14T17:49:39.000Z",
    "dateModified": "2020-11-13T00:59:52.000Z",
    "mdxType": "Meta",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "import { Meta } from '@component-controls/blocks';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"MDX\\" component={Button} />
",
}
`;

exports[`mdx-component named-alias-import.mdx 1`] = `
Object {
  "components": Object {
    "dc86c4457416c54c13147e780d972747": Object {
      "from": "../../components/button-named-class",
      "importedName": "Btn",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "dc86c4457416c54c13147e780d972747",
    },
    "date": "2020-03-14T17:49:39.000Z",
    "dateModified": "2020-11-13T00:59:52.000Z",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "import { Meta } from '@component-controls/blocks';
import { Btn as Button } from '../../components/button-named-class';
<Meta title=\\"MDX\\" component={Button} />",
}
`;

exports[`mdx-component propstable-of.mdx 1`] = `
Object {
  "components": Object {
    "dc262d21cd7820523c7e0bacca461e87": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 2,
          "mixed": 0,
          "single": 0,
          "source": 3,
          "todo": 0,
          "total": 5,
        },
      },
      "fileName": "button-default-arrow-func.js",
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "ArrowButton",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "doc": Object {
    "componentsLookup": Object {
      "ArrowButton": "dc262d21cd7820523c7e0bacca461e87",
    },
    "date": "2020-03-16T23:53:33.000Z",
    "dateModified": "2020-05-19T05:00:26.000Z",
    "mdxType": "Meta",
    "title": "Story",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "import { Meta, PropsTable } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';

<Meta title=\\"Story\\" />

<PropsTable of={ArrowButton} />
",
}
`;

exports[`mdx-component story-import.mdx 1`] = `
Object {
  "components": Object {
    "1e542c3ba23e8699f77ec19bf3f9e3ea": Object {
      "from": "./Button",
      "importedName": "Btn",
      "name": "Button",
    },
    "7e2f74e50bd73c6a0bf50c40d3c149d4": Object {
      "from": "./Toggle",
      "importedName": "Toggle",
      "name": "Toggle",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "1e542c3ba23e8699f77ec19bf3f9e3ea",
      "Toggle": "7e2f74e50bd73c6a0bf50c40d3c149d4",
    },
    "date": "2020-03-14T17:49:39.000Z",
    "dateModified": "2020-11-13T00:59:52.000Z",
    "mdxType": "Meta",
    "title": "MDX",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {
    "myStory": Object {
      "component": "Toggle",
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 66,
          "line": 18,
        },
        "start": Object {
          "column": 6,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "my-story",
      "source": "<Story name=\\"my-story\\" component={Toggle} />",
    },
  },
  "transformed": "import { Meta, Story } from '@component-controls/blocks';
import { Btn as Button } from './Button';
import { Toggle } from './Toggle';

<Meta title=\\"MDX\\" component={Button} />

<Story name=\\"my-story\\" component={Toggle} />",
}
`;

exports[`mdx-component story-subcomponents.mdx 1`] = `
Object {
  "components": Object {
    "2f4bd34d15be236674abaf6e894afe6e": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 1,
          "mixed": 0,
          "single": 0,
          "source": 2,
          "todo": 0,
          "total": 3,
        },
      },
      "fileName": "button-named-arrow-func.js",
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
    "dc262d21cd7820523c7e0bacca461e87": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 2,
          "mixed": 0,
          "single": 0,
          "source": 3,
          "todo": 0,
          "total": 5,
        },
      },
      "fileName": "button-default-arrow-func.js",
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "ArrowButton",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "doc": Object {
    "componentsLookup": Object {
      "ArrowButton": "dc262d21cd7820523c7e0bacca461e87",
      "Button": "2f4bd34d15be236674abaf6e894afe6e",
    },
    "date": "2020-03-16T23:53:33.000Z",
    "dateModified": "2020-05-19T05:00:26.000Z",
    "mdxType": "Meta",
    "title": "Story",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {
    "story": Object {
      "component": "ArrowButton",
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 25,
        },
        "start": Object {
          "column": 6,
          "line": 18,
        },
      },
      "mdxType": "Story",
      "name": "story",
      "source": "<Story
name=\\"story\\"
component={ArrowButton}
subcomponents={{
  'My Button Tab': Button,
}}
      />",
      "subcomponents": Object {
        "My Button Tab": "Button",
      },
    },
  },
  "transformed": "import { Meta, Story } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Story\\" />

<Story name=\\"story\\" component={ArrowButton} subcomponents={{ 'My Button Tab': Button }} />
",
}
`;

exports[`mdx-component subcomponents.mdx 1`] = `
Object {
  "components": Object {
    "2f4bd34d15be236674abaf6e894afe6e": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 1,
          "mixed": 0,
          "single": 0,
          "source": 2,
          "todo": 0,
          "total": 3,
        },
      },
      "fileName": "button-named-arrow-func.js",
      "from": "../../components/button-named-arrow-func",
      "importedName": "Button",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "Button",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-named-arrow-func.js",
    },
    "dc262d21cd7820523c7e0bacca461e87": Object {
      "externalDependencies": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "fileInfo": Object {
        "commits": Array [
          Object {
            "authorDate": "2020-03-14T17:49:39.000Z",
            "authorEmail": "atanasster@gmail.com",
            "authorName": "atanasster",
            "committerDate": "2020-03-14T17:49:39.000Z",
            "committerEmail": "atanasster@gmail.com",
            "committerName": "atanasster",
            "hash": "f0b0beb616c2b86713c4064552fa39dffcd60771",
            "subject": "chore: rename examples go fixtures",
          },
        ],
        "dateCreated": "2020-03-14T17:49:39.000Z",
        "dateModified": "2020-03-14T17:49:39.000Z",
        "sloc": Object {
          "block": 0,
          "blockEmpty": 0,
          "comment": 0,
          "empty": 2,
          "mixed": 0,
          "single": 0,
          "source": 3,
          "todo": 0,
          "total": 5,
        },
      },
      "fileName": "button-default-arrow-func.js",
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "jsx": Array [
        Object {
          "attributes": Array [],
          "children": Array [],
          "name": "button",
        },
      ],
      "localDependencies": Object {},
      "name": "ArrowButton",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
    },
  },
  "doc": Object {
    "component": "ArrowButton",
    "componentsLookup": Object {
      "ArrowButton": "dc262d21cd7820523c7e0bacca461e87",
      "Button": "2f4bd34d15be236674abaf6e894afe6e",
    },
    "date": "2020-03-16T23:53:33.000Z",
    "dateModified": "2020-05-19T05:00:26.000Z",
    "mdxType": "Meta",
    "subcomponents": Object {
      "Button": "Button",
    },
    "title": "Story",
  },
  "exports": Object {
    "default": Object {
      "story": Object {
        "title": undefined,
      },
    },
  },
  "packages": Object {},
  "stories": Object {},
  "transformed": "import { Meta, Story } from '@component-controls/blocks';
import ArrowButton from '../../components/button-default-arrow-func';
import { Button } from '../../components/button-named-arrow-func';

<Meta title=\\"Story\\" component={ArrowButton} subcomponents={{ Button }} />
",
}
`;
